@@ -2,6 +2,8 @@
 
 package edu.colorado.phet.acidbasesolutions.module.customsolution;
 
+import java.awt.Insets;
+
 import edu.colorado.phet.acidbasesolutions.controls.CustomSolutionControls;
 import edu.colorado.phet.acidbasesolutions.controls.TestControls;
 import edu.colorado.phet.acidbasesolutions.controls.ViewControls;
@@ -17,6 +19,7 @@ import edu.colorado.phet.common.phetcommon.view.ControlPanel;
 public class CustomSolutionControlPanel extends ControlPanel {
 
     public CustomSolutionControlPanel( Resettable resettable, ABSModel model ) {
+        setInsets( new Insets( 2, 5, 2, 5 ) );
         addControlFullWidth( new CustomSolutionControls( model ) );
         addControlFullWidth( new TestControls( model ) );
         addControlFullWidth( new ViewControls( model ) );
